hands-on/deployment/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: production-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "prod.hands-on.naijab.com"
    http:
      paths:
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 80
